Update GroundItemsPlugin.java